--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sad.tpharma">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,11 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".VenteActivity" />
         <activity
@@ -53,8 +51,20 @@
         <activity
             android:name=".ClientActivity"
             android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".UserActivity"
+            android:windowSoftInputMode="stateHidden" />
         <activity android:name=".FournisseurActivity" />
-        <activity android:name=".ReimpressionTicketActivity" android:windowSoftInputMode="stateHidden"> </activity>
+        <activity
+            android:name=".ReimpressionTicketActivity"
+            android:windowSoftInputMode="stateHidden"> </activity>
+        <activity android:name=".LoginActivity" android:windowSoftInputMode="stateHidden">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
