--- a/gradle.properties
+++ b/gradle.properties
@@ -12,13 +12,4 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Tue Jan 23 09:46:01 UTC 2018
-systemProp.http.proxyPort=3128
-systemProp.http.proxyUser=sadou
-systemProp.http.proxyPassword=sabari
-org.gradle.jvmargs=-Xmx1536m
-systemProp.https.proxyPassword=sabari
-systemProp.https.proxyHost=10.10.10.98
-systemProp.http.proxyHost=10.10.10.98
-systemProp.https.proxyPort=3128
-systemProp.https.proxyUser=sadou
+#Mon Mar 19 15:34:49 GMT 2018
