--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation files('libs/postgresql-42.2.1.jre6.jar')
     compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
+    implementation 'com.android.support:design:26.1.0'
 }
